plane/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plane
  namespace: airport-system
  labels:
    app: plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plane
  template:
    metadata:
      labels:
        app: plane
    spec:
      containers:
        - name: plane
          image: ghcr.io/joranbergfeld/airport-system-plane/plane:latest
          ports:
            - containerPort: 9000
              protocol: TCP
          resources: { }
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness          
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          # Application is configured for graceful shutdowns, so leave the app 10 seconds to handle current requests.
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
