plane/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plane
  name: plane
  namespace: airport-system
spec:
  ports:
    - name: 9000-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: plane
  sessionAffinity: None
  type: ClusterIP
