plane/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: plane
    application-system: airport-system
  name: plane
  namespace: airport-system
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: plane
    weight: 100
